[tool.poetry]
name = "identity-java"
version = "0.1.0"
description = "Identity SDK for Java"
authors = ["Tanker team <tech@tanker.io>"]

[tool.poetry.dependencies]
python = "^3.7"
tankerci = { version = ">= 2021.11.3715", source = "gitlab" }

[[tool.poetry.source]]
name = "gitlab"
url = "https://gitlab.com/api/v4/projects/20917546/packages/pypi/simple"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
